Fix status alignment to center

--- a/src/styles.css
+++ b/src/styles.css
@@ -254,6 +254,10 @@ ha-card {
 
 .metadata {
   margin: var(--vc-spacing) auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .stats {
